<resources>
    <string name="action_create_group">发起群聊</string>
    <string name="action_menu_add_friend">添加好友</string>
    <string name="action_new_normal_activity">发布图文动态</string>
    <string name="action_new_video_activity">发布视频动态</string>
    <string name="activity_delete_dialog_message">确定要删除当前动态吗？</string>
    <string name="activity_delete_dialog_success">删除成功</string>
    <string name="activity_delete_dialog_title">删除动态</string>
    <string name="activity_new_add_image">添加图片</string>
    <string name="activity_new_submit">发布</string>
    <string name="activity_new_title">发布动态</string>
    <string name="activity_published_time">发布于 %s</string>
    <string name="activity_sample_nickname">测试用户</string>
    <string name="activity_sample_video_url">http://azusa.one/cercis/1</string>
    <string name="activity_select_location_permission_dialog_cancel">取消</string>
    <string name="activity_select_location_permission_dialog_message">请尝试在应用设置中修改权限设置</string>
    <string name="activity_select_location_permission_dialog_settings">设置</string>
    <string name="activity_select_location_permission_dialog_title">无法定位</string>
    <string name="activity_send_comment_failed_message">评论发送失败: %s</string>
    <string name="activity_title">动态</string>
    <string name="app_name">Cercis</string>
    <string name="chat_action_extra_share_location">分享位置</string>
    <string name="chat_action_send_audio_cancel_icon_description">撤销发送</string>
    <string name="chat_action_send_audio_hint_cancel">松开撤消</string>
    <string name="chat_action_send_audio_hint_press">按住录制</string>
    <string name="chat_action_send_audio_hint_release">松开发送，拖动撤消</string>
    <string name="chat_action_send_image_from_gallery_button">相册</string>
    <string name="chat_action_send_image_take_photo_button">拍摄</string>
    <string name="chat_action_send_image_take_video_button">录制</string>
    <string name="chat_fab_description">跳转到最新消息</string>
    <string name="chat_item_outgoing_retry">重试消息发送</string>
    <string name="chat_menu_action_show_members">显示群聊成员</string>
    <string name="chat_message_action_copy">复制</string>
    <string name="chat_message_action_withdraw">撤回</string>
    <string name="chat_message_sending">发送中</string>
    <string name="chat_message_uploading">上传中</string>
    <string name="chat_send_audio_page_toast_record_too_short">录音时间过短</string>
    <string name="chat_sending_message_count">正在发送 %d 条消息…</string>
    <string name="chat_unsent_messages">未发送的消息</string>
    <string name="chat_unsent_messages_ask_retry">有 %d 条发送失败的消息，是否尝试重新发送？</string>
    <string name="chat_unsent_messages_do_nothing">不做处理</string>
    <string name="chat_unsent_messages_drop_all">放弃</string>
    <string name="chat_unsent_messages_retry_all">重试</string>
    <string name="contact_list_action_show_group_notifications">群通知</string>
    <string name="contact_list_action_show_requests">好友请求</string>
    <string name="contact_list_friend_request_remark_on_line">验证消息: %s</string>
    <string name="contact_list_tab_friends">好友</string>
    <string name="contact_list_tab_groups">群聊</string>
    <string name="contact_list_title">联系人</string>
    <string name="create_chat_failed_message">创建群聊失败: %s</string>
    <string name="create_group_button">创建 (%d)</string>
    <string name="create_group_retry">重试</string>
    <string name="create_group_title">创建群聊</string>
    <string name="delete">删除</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_edit_friend_display_name_cancel">取消</string>
    <string name="dialog_edit_friend_display_name_retry">重试</string>
    <string name="dialog_edit_friend_display_name_success">备注已修改</string>
    <string name="dialog_edit_friend_display_name_title">修改备注</string>
    <string name="dialog_friend_request_cancel">取消</string>
    <string name="dialog_friend_request_retry">重试</string>
    <string name="dialog_friend_request_send">发送申请</string>
    <string name="dialog_friend_request_sent">申请已发送</string>
    <string name="dialog_friend_request_title">添加 %s 为好友</string>
    <string name="dialog_ok">确定</string>
    <string name="empty" />
    <string name="error_authorization">未登录</string>
    <string name="error_change_password_inconsistent">两次密码不一致</string>
    <string name="error_network_exception">无法连接到 Cercis 服务器</string>
    <string name="error_server_error">服务器通信异常</string>
    <string name="fragment_search_cancel">取消</string>
    <string name="friend_request_accept">同意</string>
    <string name="friend_request_accept_retry">重试</string>
    <string name="friend_request_accept_success">已添加</string>
    <string name="friend_request_finished">已确认</string>
    <string name="friend_request_pending">待确认</string>
    <string name="group_info_add_member">添加成员</string>
    <string name="group_info_avatar_changed_success">头像已修改</string>
    <string name="group_info_change_avatar">修改头像</string>
    <string name="group_info_change_name_dialog_success">群名已修改</string>
    <string name="group_info_change_name_dialog_title">新群名</string>
    <string name="group_info_edit_info">编辑信息</string>
    <string name="group_info_edit_name">编辑名称</string>
    <string name="group_info_exit_group">退出群聊</string>
    <string name="group_info_exit_group_dialog_confirm_message">确定退出群聊吗？</string>
    <string name="group_info_exit_group_dialog_retry_message">群主不能退出群聊，请长按群成员选择让渡群主后重试</string>
    <string name="group_info_exit_group_dialog_title">退出群聊</string>
    <string name="group_info_give_away_owner_dialog_message">确定要让渡群主给 %s 吗？</string>
    <string name="group_info_give_away_owner_dialog_title">让渡群主</string>
    <string name="group_info_give_away_owner_success">群主已让渡</string>
    <string name="group_info_member_count">%d 位成员</string>
    <string name="group_info_remove_member">删除成员</string>
    <string name="group_info_toolbar_title">群聊信息</string>
    <string name="group_member_admin">管理员</string>
    <string name="group_member_member">群员</string>
    <string name="group_member_owner">群主</string>
    <string name="hint_activity_text" />
    <string name="hint_bio">个性签名</string>
    <string name="hint_change_password_new_password">新密码</string>
    <string name="hint_change_password_new_password_confirm">确认新密码</string>
    <string name="hint_change_password_original_password">原密码</string>
    <string name="hint_create_group_name">群聊名称</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_friend_display_name">好友备注(可以留空)</string>
    <string name="hint_friend_request_display_name">好友备注(可选)</string>
    <string name="hint_friend_request_remark">验证消息(可选)</string>
    <string name="hint_image_count">已添加 %d 张图片</string>
    <string name="hint_nickname">昵称</string>
    <string name="image_dialog_title">图片</string>
    <string name="image_save_to_local">保存到本地</string>
    <string name="image_save_to_local_success">图片已保存</string>
    <string name="invite_group_user_button_caption">添加 (%d)</string>
    <string name="invite_group_user_failed_message">添加用户失败</string>
    <string name="login_error_invalid_credential">用户名或密码错误</string>
    <string name="login_hint_password">密码</string>
    <string name="login_hint_user_id">ID / 手机号</string>
    <string name="login_link_reset_password">找回密码</string>
    <string name="login_link_user_signup">用户注册</string>
    <string name="lorem_ipsum">用户可以发布图文或视频动态，在动态页面可以按照时间线浏览其联系人发布的动态，并进行进行点赞评论操作。</string>
    <string name="main_401_dialog_body">点击 %s 回到登录界面</string>
    <string name="main_401_dialog_ok_button">确定</string>
    <string name="main_401_dialog_title">登录过期</string>
    <string name="message_digest">%s: %s</string>
    <string name="message_incorrect_location">不正确的位置</string>
    <string name="message_text_withdraw">%s 撤回了一条消息</string>
    <string name="message_type_audio">音频</string>
    <string name="message_type_image">图片</string>
    <string name="message_type_location">位置</string>
    <string name="message_type_text">文本</string>
    <string name="message_type_unknown">不支持的消息</string>
    <string name="message_type_video">视频</string>
    <string name="message_type_withdraw">撤回了一条消息</string>
    <string name="nav_activity">动态</string>
    <string name="nav_contacts">联系人</string>
    <string name="nav_messages">消息</string>
    <string name="nav_profile">我的</string>
    <string name="notification_channel_description">消息通知</string>
    <string name="notification_name">Cercis</string>
    <string name="permission_not_granted_dialog_cancel">取消</string>
    <string name="permission_not_granted_dialog_jump_to_app_settings">手动设置</string>
    <string name="permission_not_granted_dialog_record_audio_required">发送音频需要开启录音权限</string>
    <string name="permission_not_granted_dialog_title">权限获取失败</string>
    <string name="profile_button_logout">登出</string>
    <string name="profile_cercis_id">Cercis ID: %d</string>
    <string name="profile_display_name">备注: %s</string>
    <string name="profile_edit_change_password">修改密码</string>
    <string name="profile_edit_select_avatar">选择头像图片</string>
    <string name="profile_edit_title">修改个人信息</string>
    <string name="profile_snackbar_change_password_failed">未能修改密码: %s</string>
    <string name="profile_snackbar_change_password_success">密码已修改</string>
    <string name="remove_group_member_button_caption">移除 (%d)</string>
    <string name="remove_group_member_failed_message">移除成员失败</string>
    <string name="select_location_title">选择位置</string>
    <string name="select_user_default_title">选择用户</string>
    <string name="show_location_title">位置</string>
    <string name="signup_button_back_to_login">返回登录界面</string>
    <string name="signup_button_signup">注册</string>
    <string name="signup_code">验证码</string>
    <string name="signup_code_next_step">下一步</string>
    <string name="signup_error_password_invalid_character">密码包含非法字符 \'%s\'</string>
    <string name="signup_error_password_min_8_max_20">密码应为 8 ~ 20 位</string>
    <string name="signup_error_password_should_3_out_of_4">密码应包含数字、小写字母、大写字母、符号中的至少三种</string>
    <string name="signup_headline_2">加入 Cercis</string>
    <string name="signup_headline_signup">注册</string>
    <string name="signup_hint_confirm_password">确认密码</string>
    <string name="signup_hint_email_optional">邮箱 (可选)</string>
    <string name="signup_hint_mobile_code">手机号</string>
    <string name="signup_send_code">发送</string>
    <string name="signup_send_mobile_code">发送短信验证码</string>
    <string name="signup_success_headline">注册成功！</string>
    <string name="signup_success_keep_your_id">这是您的登录凭据</string>
    <string name="signup_success_your_id">您的 Cercis ID 为</string>
    <string name="signup_switch_to_email_mode">使用邮箱注册</string>
    <string name="signup_switch_to_mobile_mode">使用手机号注册</string>
    <string name="snackbar_retry">重试</string>
    <string name="splash_button_goto_login">登录</string>
    <string name="splash_button_goto_user_signup">新用户注册</string>
    <string name="submit">提交</string>
    <string name="title_activity_startup">Cercis</string>
    <string name="user_info_add_friend">加好友</string>
    <string name="user_info_delete_friend">删除好友</string>
    <string name="user_info_edit_display_name">编辑好友备注</string>
    <string name="user_info_send_messages">发消息</string>
    <string name="user_separator">，</string>
    <string name="video_dialog_title">视频</string>
</resources>
