<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="cn.cercis.viewmodel.SignUpViewModel" />

        <variable
            name="viewModel"
            type="SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="36dp"
        tools:context=".ui.startup.SignUpFragment">

        <TextView
            android:id="@+id/signup_headline"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_headline_signup"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signup_headline2"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_headline_2"
            app:layout_constraintTop_toBottomOf="@id/signup_headline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/signup_hint_mobile_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_password"
            app:shapeAppearanceOverlay="@style/roundedCorner">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={viewModel.mobile}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_nickname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_nickname"
            app:layout_constraintTop_toBottomOf="@id/signup_headline2"
            app:shapeAppearanceOverlay="@style/roundedCorner">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={viewModel.nickname}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/login_hint_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="@{viewModel.passwordError != null}"
            app:layout_constraintTop_toBottomOf="@id/signup_nickname"
            app:shapeAppearanceOverlay="@style/roundedCorner">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_code_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:enabled="@{viewModel.canSendCode}"
            android:insetBottom="0dp"
            android:onClick="@{viewModel::onSendCodeButtonClicked}"
            android:text="@{viewModel.countdownText}"
            android:clickable="@{viewModel.canSendCode}"
            app:layout_constraintBaseline_toBaselineOf="@id/signup_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signup_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:hint="@string/signup_code"
            app:errorEnabled="@{viewModel.verificationError != null}"
            app:layout_constraintEnd_toStartOf="@id/send_code_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_mobile"
            app:shapeAppearanceOverlay="@style/roundedCorner">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={viewModel.verificationCode}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:clickable="@{viewModel.canSubmit}"
            android:enabled="@{viewModel.canSubmit}"
            android:onClick="@{viewModel::onSubmitButtonClicked}"
            android:text="@string/signup_button_signup"
            app:layout_constraintTop_toBottomOf="@id/signup_code" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signup_submit_error"
            android:textColor="@color/cercis_accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signup_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>