<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_action_send_image_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="?attr/colorSurfaceDark"
    tools:layout_height="150dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chat_action_send_image_take_photo_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="2dp"
        android:text="@string/chat_action_send_image_take_photo_button"
        app:icon="@drawable/ic_camera_40"
        app:iconGravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chat_action_send_image_take_video_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chat_action_send_image_take_video_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="2dp"
        android:text="@string/chat_action_send_image_take_video_button"
        app:icon="@drawable/ic_videocam_40"
        app:iconGravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chat_action_send_image_from_gallery_button"
        app:layout_constraintStart_toEndOf="@id/chat_action_send_image_take_photo_button"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/chat_action_send_image_from_gallery_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/chat_extra_action_button_size"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="2dp"
        android:text="@string/chat_action_send_image_from_gallery_button"
        app:icon="@drawable/ic_insert_photo_40"
        app:iconGravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chat_action_send_image_take_video_button"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>