<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.startup.SplashFragment">

    <data>

        <import type="cn.cercis.viewmodel.SplashViewModel" />

        <variable
            name="viewModel"
            type="SplashViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/splash_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/splash_button_group"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_cercis" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="50sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/splash_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_logo">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/splash_button_goto_user_signup"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/splash_button_goto_user_signup" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/splash_button_goto_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:text="@string/splash_button_goto_login" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>