<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_change_password_original_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="password_toggle"
        app:shapeAppearanceOverlay="@style/roundedCorner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_change_password_original_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_change_password_original_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_change_password_new_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/dialog_change_password_original_password_layout"
        app:shapeAppearanceOverlay="@style/roundedCorner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_change_password_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_change_password_new_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_change_password_new_password_confirm_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/dialog_change_password_new_password_layout"
        app:shapeAppearanceOverlay="@style/roundedCorner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_change_password_new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_change_password_new_password_confirm"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
