<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.ActivityNewFragment">

    <data>

        <import type="cn.cercis.viewmodel.ActivityNewViewModel" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="ActivityNewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_new_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/fragmentBackground"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fragment_activity_new_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:title="@string/activity_new_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_activity_new_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_new_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedCorner5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="@string/hint_activity_text"
                        android:text="@={viewModel.text}"
                        android:inputType="textMultiLine"
                        android:lines="10"
                        android:maxLines="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/activity_new_image_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@{viewModel.hint}"
                    android:visibility="@{viewModel.isHintVisible}"
                    app:layout_constraintTop_toBottomOf="@+id/activity_new_text"
                    tools:text="已添加 1 张图片" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_new_add_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:clickable="@{viewModel.canAddImage}"
                    android:enabled="@{viewModel.canAddImage}"
                    android:text="@string/activity_new_add_image"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:layout_constraintTop_toBottomOf="@id/activity_new_image_count" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activity_new_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:clickable="@{viewModel.canSubmit}"
                    android:enabled="@{viewModel.canSubmit}"
                    android:text="@string/activity_new_submit"
                    app:layout_constraintTop_toBottomOf="@id/activity_new_add_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>